[tool.poetry]
name = "medium"
version = "0.1.0"
description = ""
authors = ["Emanuele Guidotti <emanuele.guidotti@unine.ch>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
lxml = "^4.9.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

